--- a/frontend/index.html
+++ b/frontend/index.html
@@ -107,6 +107,16 @@
         </div>
     </div>
 
+    <footer class="footer">
+        <div class="container footer-content">
+            <p>Built with love ❤️ Dhruval Padia </p>
+            <div class="social-links">
+                <a href="https://github.com/dhruval30" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://linkedin.com/in/dhruvalpadia" target="_blank"><i class="fab fa-linkedin"></i></a>
+            </div>
+        </div>
+    </footer>
+    
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             const repoInput = document.getElementById("repoInput");
