--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,7 @@
                     <i class="fab fa-github"></i>
                     <span>GitChat</span>
                 </div>
-                <div class="tagline">Understand repositories through conversation</div>
+                <div class="tagline">Your Repo Buddy</div>
             </div>
         </div>
     </header>
