--- a/frontend/index.html
+++ b/frontend/index.html
@@ -92,7 +92,7 @@
                         <div class="markdown-content">
                             👋 Welcome to GitChat! Fetch a GitHub repository to get started.
                             
-                            I'll help you understand the repository structure, code, and functionality through conversation.
+                            I'll help you understand the repository structure, code, and functionality. 
                         </div>
                     </div>
                 </div>
